<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F5F5F5">

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rlMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tvWhere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/str_WhereDo"
                    android:textColor="@color/color_6E6E6E" />

                <RelativeLayout
                    android:id="@+id/rlFromTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvWhere">

                    <RelativeLayout
                        android:id="@+id/rlFrom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/bg_departure"
                            android:scaleType="fitXY"
                            />

                        <ImageView
                            android:id="@+id/imgRoundFrom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_15"
                            android:src="@drawable/without_select_radio" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_20"
                            android:layout_toRightOf="@+id/imgRoundFrom">

                            <TextView
                                android:id="@+id/tvFrom"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/str_From"
                                android:textColor="@color/color_8E8E8E" />

                            <RelativeLayout
                                android:id="@+id/rlDepartureError"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/dp_10"
                                android:layout_toRightOf="@+id/tvFrom"
                                android:visibility="gone">

                                <ImageView
                                    android:id="@+id/imgDepartureError"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:src="@drawable/icon_smock_alert" />

                                <TextView
                                    android:id="@+id/tvDepartureErrorMsg"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_toRightOf="@+id/imgDepartureError"
                                    android:background="@android:color/transparent"
                                    android:text="@string/str_Eror_Departure"
                                    android:textColor="@color/color_707070" />
                            </RelativeLayout>

                            <AutoCompleteTextView
                                android:id="@+id/edtDeparture"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tvFrom"
                                android:background="@android:color/transparent"
                                android:hint="@string/str_Departure"
                                android:singleLine="true"
                                android:elevation="@dimen/dp_0"
                                android:textCursorDrawable="@null"
                                android:outlineAmbientShadowColor="@color/color_ffffff"
                                android:shadowColor="@color/color_ffffff"
                                android:outlineSpotShadowColor="@color/color_ffffff"
                                android:textColor="@color/color_4B4B4B"
                                android:textColorHint="@color/color_4B4B4B"
                                />
                        </RelativeLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rlTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rlFrom">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/bg_destination"
                            android:scaleType="fitXY"
                            />

                        <ImageView
                            android:id="@+id/imgRoundTo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_15"
                            android:src="@drawable/select_radio" />


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_20"
                            android:layout_toRightOf="@+id/imgRoundTo">

                            <TextView
                                android:id="@+id/tvTo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/str_To"
                                android:textColor="@color/color_8E8E8E" />

                            <RelativeLayout
                                android:id="@+id/rlDestinationError"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/dp_10"
                                android:layout_toRightOf="@+id/tvTo"
                                android:visibility="gone">

                                <ImageView
                                    android:id="@+id/imgDestinationError"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:src="@drawable/icon_smock_alert" />

                                <TextView
                                    android:id="@+id/tvDestinationErrorMsg"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_toRightOf="@+id/imgDestinationError"
                                    android:background="@android:color/transparent"
                                    android:text="@string/str_Eror_Destination"
                                    android:textColor="@color/color_707070" />
                            </RelativeLayout>

                            <AutoCompleteTextView
                                android:id="@+id/edtDestination"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tvTo"
                                android:background="@android:color/transparent"
                                android:hint="@string/str_Destination"
                                android:singleLine="true"
                                android:textColor="@color/color_4B4B4B"
                                android:textColorHint="@color/color_4B4B4B" />
                        </RelativeLayout>
                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlFromTo">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/bg_white_date"
                        android:scaleType="fitXY"
                        />


                    <ImageView
                        android:id="@+id/imgDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:src="@drawable/icon_calender" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_toRightOf="@+id/imgDate">

                        <TextView
                            android:id="@+id/txtDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_Date"
                            android:textColor="@color/color_8E8E8E" />

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txtDate"
                            android:background="@android:color/transparent"
                            android:text="11 Jun 2019"
                            android:textColor="@color/color_4B4B4B" />
                    </RelativeLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rlFindBus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlDate"
                    android:layout_marginTop="@dimen/dp_15_minus"
                    android:layout_centerHorizontal="true">

                    <ImageView
                        android:id="@+id/imgFindBus"
                        android:layout_width="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content"/>


                    <TextView
                        android:id="@+id/tvFindBus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/str_FindBus"
                        android:textColor="@color/color_ffffff" />


                </RelativeLayout>

                <TextView
                    android:id="@+id/tvOffers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlFindBus"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/str_Offers"
                    android:textColor="@color/color_232323" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvOffers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlMain"
                android:layout_marginTop="@dimen/dp_5"
                app:reverseLayout="true">

            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:indeterminateTint="@color/color_1473E6" />
</RelativeLayout>